# irish-electricity-data

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/irish_electricity_data/: __init__.py  client.py
src/irish_electricity_data/core/: constants.py  exceptions.py  orchestrator.py  transport.py
src/irish_electricity_data/providers/: __init__.py  base.py
src/irish_electricity_data/providers/eirgrid/: __init__.py  eirgrid.py  models.py  parsers.py
src/irish_electricity_data/providers/semo/: __init__.py  models.py  parsers.py  semo.py
src/irish_electricity_data/providers/semopx/: __init__.py  models.py  parsers.py  semopx.py
src/irish_electricity_data/schema/: __init__.py  models.py
src/irish_electricity_data/sources/semo/: _reports.py  auction_results.py
src/irish_electricity_data/sources/semopx/: _reports.py
tests/: test_eirgrid_parsers.py  test_semo_parsers.py  test_semo_reports.py  test_semopx_parsers.py  test_semopx_reports.py
tests/fixtures/: eirgrid_interconnection_sample.json  semo_5min_imbalance_price.xml  semopx_market_result_day_ahead.csv
tests/fixtures/eirgrid/: co2_sample.json  frequency_sample.json  fuel_mix_sample.json  generation_sample.json  outturn_sample.json  snsp_sample.json
tests/fixtures/semo/: PUB_15MinAggWindFcst.xml  PUB_30MinAvgImbalPrc.xml  PUB_5MinImbalPrcSuppInfo.xml  PUB_DailyFinalPhysicalNotifications.xml  PUB_DailyMeterDataD1.xml  PUB_HrlyForecastImbalance.xml  PUB_LTSDOperationalSchedule.xml  auction_result_day_ahead.json
tests/fixtures/semopx/: IDA1_InterconnectorFlows.xml
