[project]
name = "irish-electricity-data"
version = "0.1.0"
description = "Normalized, typed client for Irish Single Electricity Market (SEM) data."
readme = "README.md"
authors = [
    { name = "Laurence Quinn", email = "lorrieq@hotmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.10.0",
]

[project.urls]
Repository = "https://github.com/lorrieq/irish-electricity-data"
Issues = "https://github.com/lorrieq/irish-electricity-data/issues"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (keep syntax modern for Python 3.12+)
    "B",   # flake8-bugbear (common bugs and design issues)
    "C4",  # flake8-comprehensions (cleaner list/dict/set expressions)
    "RUF", # ruff-specific catches
]
ignore = [
    "E501",   # line too long — handled by the formatter
    "RUF012", # mutable defaults in Pydantic BaseModel subclasses are safe
]

[tool.ruff.format]
quote-style = "double"
